sound processing update
Made the file more user-friendly so that the user only needs to specify the path to the internal and external .wavs, and then just run the whole file.

--- a/Synchronization/Door Close Audio Detector/sound_processing.ipynb
+++ b/Synchronization/Door Close Audio Detector/sound_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,11 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import signal\n",
     "%pylab inline\n",
-    "import scipy.io.wavfile as wav"
+    "import scipy.io.wavfile as wav\n",
+    "\n",
+    "# input arguments\n",
+    "path_to_external_audio = \"outside.wav\"\n",
+    "path_to_internal_audio = \"inside.wav\""
    ]
   },
   {
@@ -150,7 +154,7 @@
    ],
    "source": [
     "# Below is the audio of the car from the outside. \n",
-    "left, sampling_rate = read_file(\"outside.wav\")\n",
+    "left, sampling_rate = read_file(path_to_external_audio)\n",
     "left_copy, car_start = left[s(0):s(70)], False\n",
     "z_filtered = z_filter(left_copy, 2/3)\n",
     "data, index = moving_average(z_filtered, 44100), 0\n",
@@ -229,7 +233,7 @@
    ],
    "source": [
     "# Below is the audio of the car from the inside. \n",
-    "right, sampling_rate = read_file(\"inside.wav\")\n",
+    "right, sampling_rate = read_file(path_to_internal_audio)\n",
     "right_copy, car_start = right[s(0):s(70)], False\n",
     "z_filtered = z_filter(right_copy, 2/3)\n",
     "\n",
